fix: build error

--- a/src/content/blog/20250108.md
+++ b/src/content/blog/20250108.md
@@ -1,8 +1,9 @@
 ---
-title: "2025/1/8 日報"
-description: "2025/1/8 の日報"
+title: "2025\/1\/8 日報"
+description: "2025\/1\/8の日報"
 pubDate: "Jan 08 2025"
-tags: ["日報", "Copilot”, "v0", "ITS"]
+heroImage: /blog/blog/20250108/openv0.png
+tags: ["日報", "Copilot", "v0", "ITS"]
 ---
 
 - [生成AIの活用](#生成AIの活用)
@@ -11,7 +12,6 @@ tags: ["日報", "Copilot”, "v0", "ITS"]
 - [ITSの旅行補助の利用](#itsの旅行補助の利用)
   - [背景](#背景)
   - [手順](#手順)
-
 
 ### 生成AIの活用
 ##### Copilot Instructions
