fix: github sub issueを追加

--- a/src/content/blog/20250108.md
+++ b/src/content/blog/20250108.md
@@ -36,7 +36,11 @@ tags: ["日報", "Copilot", "v0", "ITS"]
 - 会社でITSに入っており、[補助「JTB契約保養施設 宿泊＋交通付プラン）年度内（4月から翌年3月まで）1回 1万円」](https://www.its-kenpo.or.jp/shisetsu/hojo_koutsuu/index.html)を利用できそう
 
 ##### 手順
-  - JTB(ネット以外)で「健康保険の補助を利用する」旨を伝えて、予約を行う(補助承認書の提出期限を決める必要があるので、前もった期日で予約する)
-  - ITSのWebサイトから補助申請を行う
-  - 補助承認書が郵送で届く
-  - 補助承認書をJTBに提出
+- JTB(ネット以外)で「健康保険の補助を利用する」旨を伝えて、予約を行う(補助承認書の提出期限を決める必要があるので、前もった期日で予約する)
+- ITSのWebサイトから補助申請を行う
+- 補助承認書が郵送で届く
+- 補助承認書をJTBに提出
+
+### GitHub Sub Issueがパブリックベータになっていた
+- [10月からパブリックベータ](https://github.blog/changelog/2024-10-01-evolving-github-issues-public-beta/#break-down-and-nest-issues-with-sub-issues)だったので、使ってみる
+- wait list から申請すると、一定時間後に利用できるようになる
